force-app/main/default/objects/LLC_BI__Dimension_Range__c/LLC_BI__Dimension_Range__c.object-meta.xml
<CustomObject>
    <description>This object stores the continuous dimensions used in a particular matrix and the associated values.</description>
    <label>Dimension Range</label>
    <nameField>
        <label>Dimension Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>