force-app/main/default/objects/LLC_BI__Dimension_Range__c/fields/LLC_BI__Dimension__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Dimension__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Administrators populate this required lookup field to associate the dimension range to a dimension. By default, the value is blank.</description>
    <inlineHelpText>Select the associated dimension.</inlineHelpText>
    <label>Dimension</label>
    <referenceTo>LLC_BI__Dimension__c</referenceTo>
    <relationshipLabel>Dimension Ranges</relationshipLabel>
    <relationshipName>Dimension_Ranges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>