force-app/main/default/objects/LLC_BI__Dimension_Range__c/fields/LLC_BI__Maximum__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum__c</fullName>
    <description>Administrators populate this required number field to set a maximum value for a range. By default, the value is blank.</description>
    <inlineHelpText>Enter the maximum value for this range.</inlineHelpText>
    <label>Maximum</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>