force-app/main/default/objects/LLC_BI__Dimension_Range__c/fields/LLC_BI__Minimum__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Minimum__c</fullName>
    <description>Administrators populate this required number field to set a minimum value for a range. By default, the value is blank.</description>
    <inlineHelpText>Enter the minimum value for this range.</inlineHelpText>
    <label>Minimum</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>